--- a/README.me
+++ b/README.me
@@ -1,4 +1,4 @@
-Build a game of battling alien spaceships using Javascript.
+========== Build a game of battling alien spaceships using Javascript. ==========
 
 Earth has been attacked by a horde of aliens! You are the captain of the USS HelloWorld, on a mission to destroy every last alien ship.
 
